@@ -6,6 +6,7 @@
  360406 pop up a message when post is refused by server (Frederic Crozat)
  361121 pan icon love (Michael Monreal)
  361445 Headers pane always has a scrollbar (Michael Monreal)
+ 361885 Cannot background compose window (Ken Bloom)
 
 0.116 "Blanton's"
  360375 non-ascii subject is mangled
